[project]
name = "llm-gateways"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.8.0",
    "kernel>=0.65.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-litellm>=0.6.6",
    "langchain-openai>=1.2.2",
    "litellm>=1.88.1",
    "python-dotenv>=1.2.2",
]
